--- a/.project
+++ b/.project
@@ -57,14 +57,14 @@
 			<location>C:/Users/Dennis/VivadoHLS/Harris/src/top.hpp</location>
 		</link>
 		<link>
+			<name>testbench/Testpictures</name>
+			<type>2</type>
+			<location>C:/Users/Dennis/VivadoHLS/Harris/Testpictures</location>
+		</link>
+		<link>
 			<name>testbench/tb.cpp</name>
 			<type>1</type>
 			<location>C:/Users/Dennis/VivadoHLS/Harris/testbench/tb.cpp</location>
-		</link>
-		<link>
-			<name>testbench/test.jpg</name>
-			<type>1</type>
-			<location>C:/Users/Dennis/VivadoHLS/Harris/testbench/test.jpg</location>
 		</link>
 		<link>
 			<name>solution1/constraints/.xml.directive</name>
